--- a/style.css
+++ b/style.css
@@ -219,6 +219,7 @@ section.success {
     height: 100%;
     opacity: 0;
     background: rgba(24,288,156,.9);
+    border-radius: 75% / 35%;
     -webkit-transition: all ease .5s;
     -moz-transition: all ease .5s;
     transition: all ease .5s;
