--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ section.success {
 
 .btn-outline {
     margin-top: 15px;
-    border: solid 2px ffcb3d;
+    border: solid 2px #ffcb3d;
     font-size: 20px;
     color: #ffcb3d;
     background: #fff;
