--- a/style.css
+++ b/style.css
@@ -265,7 +265,7 @@ section.success {
     color: #ffcb3d;
     background: #fff;
     transition: all .3s ease-in-out;
-}i
+}
 
 .btn-outline:hover,
 .btn-outline:focus,
