--- a/style.css
+++ b/style.css
@@ -262,6 +262,7 @@ section.success {
     margin-top: 15px;
     border: solid 2px #ffcb3d;
     font-size: 20px;
+    font-weight: bold;
     color: #ffcb3d;
     background: #fff;
     transition: all .3s ease-in-out;
