--- a/style.css
+++ b/style.css
@@ -260,11 +260,11 @@ section.success {
 
 .btn-outline {
     margin-top: 15px;
-    border: solid 3px #fff;
+    border: solid 3px #4ac48d;
     font-size: 20px;
     font-weight: normal;
-    color: #fff;
-    background: #ffcb3d;
+    color: #4ac48d;
+    background: #fff;
     transition: all .3s ease-in-out;
 }
 
