--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ section.success {
 
 .btn-outline {
     margin-top: 15px;
-    border: solid 3px #4ac48d;
+    border: solid 3px #253443;
     font-size: 20px;
     font-weight: normal;
     color: #4ac48d;
