--- a/style.css
+++ b/style.css
@@ -274,7 +274,8 @@ section.success {
 .fa-github,
 .fa-code-fork,
 .fa-linkedin-square,
-.fa-twitter {
+.fa-twitter,
+.fa-envelope {
     font-size: 25px;
 }
 
