--- a/style.css
+++ b/style.css
@@ -308,8 +308,8 @@ section.success {
 .btn-outline-light:active,
 .btn-outline-light.active {
     border: solid 1px #253443;
-    color: rgba(255, 219, 120, .5);
-    background: #fff;
+    color: #253443;
+    background: rgba(255, 219, 120, .5);
 }
 
 
