--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ section.success-light {
 section.success-light:hover,
 section.success-light:focus {
     color: #ffdb78;
-    background: #4ac48d;
+    background: #253443;
 }
 section.success {
     color: #fff;
