--- a/style.css
+++ b/style.css
@@ -197,10 +197,15 @@ section.success-light:focus {
     background: #253443;
 }
 section.success {
+    color: #253443;
+    background: #fff;
+}
+
+section.success:hover,
+section.success:focus {
     color: #fff;
     background: #4ac48d;
 }
-
 @media(max-width:767px) {
     section {
         padding: 40px 0;
