--- a/style.css
+++ b/style.css
@@ -205,7 +205,7 @@ section.success:hover,
 section.success:focus {
     color: #fff;
     background: #4ac48d;
-    transition: background .1s ease-in-out;
+    transition: background 1s ease-in-out;
 }
 @media(max-width:767px) {
     section {
