--- a/style.css
+++ b/style.css
@@ -194,10 +194,7 @@ section.success-light {
 section.success-light:hover,
 seciton.success-light:focus,
 section.success-light:active {
-    .btn-outline-light:hover,
-    .btn-outline-light:focus,
-    .btn-outline-light:active,
-    .btn-outline-light.active {
+    .btn-outline-light {
         border: solid 1px #253443;
         color: #ffdb78;
         background: #253443;
