--- a/style.css
+++ b/style.css
@@ -189,6 +189,17 @@ section h2 {
 ul.skills-left {
     float: right;
 }
+ul.skills-right {
+    float: left;
+}
+
+div.skills-left,
+div.skills-right {
+    width: 45%;
+}
+div.skills-div {
+    width: 9%;
+}
 
 section.success-light {
     color: #253443;
