--- a/style.css
+++ b/style.css
@@ -198,6 +198,7 @@ div.skills-right {
     position: relative;
     left: 50%;
     display: inline-block;
+    vertical-align: top;
     width: 400px;
     margin: 15px;
 }
