--- a/style.css
+++ b/style.css
@@ -195,7 +195,7 @@ div.skills-div {
     position: relative;
     left: -50%;
     text-align: left;
-    text-size: 18px;
+    font-size: 16px;
 }
 
 div.skills-left,
