--- a/style.css
+++ b/style.css
@@ -223,7 +223,7 @@ div.skills-right {
         display: block;
         width: 98%;
         margin: 10px;
-        margin-left; 0px;
+        margin-right; 0px;
     }
 }
 
